// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render outline button 1`] = `
<body>
  <div>
    <button
      class="btn btn-outline"
      type="button"
    >
      test button
    </button>
  </div>
</body>
`;

exports[`Button should render primary button as default 1`] = `
<body>
  <div>
    <button
      class="btn btn-primary"
      type="button"
    >
      test button
    </button>
  </div>
</body>
`;
